Điều chỉnh tốc độ animation và sửa lỗi nút NO

--- a/hoa.html
+++ b/hoa.html
@@ -88,7 +88,7 @@
   <audio id="bgMusic" src="TikVid.io_7481858163407473927.mp3" loop></audio>
 
   <div id="startScreen">
-    <button id="startBtn">Nhấn để bắt đầu</button>
+    <button id="startBtn">Mời chị Lệ nhấn nút bắt đầu</button>
   </div>
 
   <div id="panel">
@@ -105,7 +105,7 @@
 
   <div id="response">
     <img src="https://i.pinimg.com/originals/fa/a2/bf/faa2bf2fc4a1ac4dec5d22242cc34f53.gif" alt="Us">
-    <p>Yayyy! I love you too! 💕😍!</p>
+    <p>Yayyy! I love you Nhật Lệ! 💕😍!</p>
   </div>
 
   <script>
